# Project-Korora

./: .editorconfig  .editorconfig-checker.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  pr-prefix-labeler.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-miniconda/: action.yml
.github/workflows/: code-checks.yml  labeler.yml  unit-tests.yml
Project_Korora/src/: main.py
Project_Korora/src/Tasks/: template_task.py
Project_Korora/src/lib/: adm1176.py  pycubed.py
Project_Korora/src/lib/tasko/: __init__.py  loop.py  managed_resource.py  managed_spi.py
Project_Korora/tests/: managed_spi_test.py  test_loop.py  test_main.py  test_managed_resource.py
doc/: conf.py  index.rst
src/: main.py
tests/: test_main.py
