[build-system]
# Specifies how the project should be built (using setuptools)
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Basic project metadata
name = "project-korora"
version = "0.1.0"
description = "A brief description of Project-Korora."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
# Code formatter settings
line-length = 88
target-version = ['py310']

[tool.isort]
# Import sorting settings (compatible with Black)
profile = "black"
line_length = 88

[tool.flake8]
# Linter settings
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache/"
]
max-complexity = 10
max-line-length = 88

[tool.pytest.ini_options]
addopts = "-l"
testpaths = ["Project_Korora/tests"]
